# glance

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: release.yml
docs/: PRD-snap-and-ask.md  features-theming.md  features-update-popup.md  key-features.md
src/: App.svelte  app.css  clipboard.js  drag.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FollowUpInput.svelte  HistoryPanel.svelte  PopupBody.svelte  PopupFooter.svelte  PopupHeader.svelte  ThemePicker.svelte
src/services/: clipboard.js  groq.js  history.js  theme.js  window.js
