[package]
name = "glance"
version = "0.1.0"
description = "Desktop AI tool: capture layar/clipboard, tanya AI lewat global shortcut"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
# Nama lib disamakan dengan pattern Tauri v2 default
name = "glance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
